# F1TENTH-Reactive-Static-and-Dinamic-Racing-Budapest

./: README.md  package.xml  setup.cfg  setup.py
config/: agents_test2_budapest.yaml  sim.yaml  sim_test1_budapest.yaml
f1tenth_multiagent_race/: ftg_node_obstaculos.py  ftg_node_obstaculos_respaldo.py  ftg_node_obstaculos_respaldo2.py  gym_bridge_multi.py  lap_timer.py
launch/: multiagent.rviz  multiagent_bridge_launch.py  racecar.xacro  test1_static_obstacles_launch.py
maps/: Budapest_map_obstaculos.yaml
